--- a/style.css
+++ b/style.css
@@ -1,47 +1,57 @@
 [data-theme="light"] {
-    --color-bg: #ffffff;
-    --color-fg: #232856;
+	--color-bg: #ffffff;
+	--color-fg: #232856;
 }
 
 [data-theme="dark"] {
-    --color-bg: #232856;
-    --color-fg: #ffffff;
+	--color-bg: #232856;
+	--color-fg: #ffffff;
 }
 
 @font-face {
-    font-family: CallingCode;
-    src: url(CallingCode-Regular.ttf);
+	font-family: CallingCode;
+	src: url(CallingCode-Regular.ttf);
 }
 
 body {
-    font-family: CallingCode, sans-serif;
-    background-color: var(--color-bg);
-    color: var(--color-fg);
-    margin: 10%;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    border: var(--color-fg) 1px solid;
+	font-family: CallingCode, sans-serif;
+	background-color: var(--color-bg);
+	color: var(--color-fg);
+	margin: 10%;
+	margin-top: 5%;
+	margin-bottom: 5%;
+	border: var(--color-fg) 1px solid;
 }
 
 header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding-left: 10px;
+	padding-right: 10px;
+	border-bottom: var(--color-fg) 1px solid;
+}
+
+.right-header {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    padding-left: 10px;
-    padding-right: 10px;
-    border-bottom: var(--color-fg) 1px solid;
 }
 
 button {
-    background-color: var(--color-bg);
-    color: var(--color-fg);
+    display: block;
+    width: 100%;
+    font-size: 100% !important;
+	background-color: var(--color-bg);
+	color: var(--color-fg);
+	cursor: pointer;
+    text-align: center;
+    padding: 5px;
+    margin: 5px;
     border: none;
-    cursor: pointer;
-    overflow: hidden;
-    outline: none;
+    text-transform: uppercase;
 }
 
 .material-symbols-outlined {
-    font-size: 40px !important;
-    font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 40;
+	font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 40;
 }
